deps/v8/test/message/fail/import-as-redeclaration.out
*%(basename)s:6: SyntaxError: Identifier 'foo' has already been declared
import { bar as foo } from "mod";
                ^^^
SyntaxError: Identifier 'foo' has already been declared
